# lightragmcp

./: .env.example  .gitignore  API_CORRECTIONS.md  API_DEBUG_GUIDE.md  API_REFERENCE.md  AUTHOR.md  CHANGELOG.md  CLEAN_SUMMARY.md  CONTRIBUTING.md  EXAMPLES.md  FINAL_SUMMARY.md  LICENSE  NPM_UPDATE_SUCCESS.md  NPX_ONLY_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  PUBLICATION_SUCCESS.md  README.md  REPOSITORY_CLEAN.md  REPOSITORY_STATUS.md  TOOLS_SUMMARY.md  URLS_REFERENCE.md  index.js  lightragmcp.code-workspace  package-lock.json  package.json  pyproject.toml  test-endpoints.js  wrapper.js
lightrag_mcp_server/: __init__.py  __main__.py  client.py  server.py
tests/: test_server.py
